@@ -256,6 +256,11 @@ Other Changes
 
   Relates to #6612
 
+* Don't report ``unsupported-binary-operation`` on Python <= 3.9 when using the ``|`` operator
+  with types, if one has a metaclass that overloads ``__or__`` or ``__ror__`` as appropriate.
+
+  Closes #4951
+
 * Fix bug where it writes a plain text error message to stdout, invalidating output formats.
 
   Closes #6597
